--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "recipe application",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "build": "parcel build index.html"
   },
   "author": "Gatien De Bast",
   "license": "ISC",
